# tg_summary_bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  agents.py  bot.py  config.py  database.py  docker-compose.yml  main.py  migrate_to_vector.py  models.py  ocr.py  pyproject.toml  telegram_client.py  tg_summary_bot.session  vector_database.py
