[project]
name = "tg-summary-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "httpx>=0.28.1",
    "pydantic-ai>=0.2.18",
    "pydantic-settings>=2.9.1",
    "motor>=3.3.0",
    "easyocr>=1.7.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
]
